Fix 2021-04 and 2025-09